<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ufpi.br.ufpimobile.views.TraceRouteFragment">

    <!--
    android:layout_alignParentEnd="false"
    -->
    android:id="@+id/originTitle"

    <TextView
        android:id="@+id/originTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/origin_title" />

    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/originEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/originTitle"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:freezesText="true"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences|textAutoCorrect">

        <requestFocus />
    </AutoCompleteTextView>


    <TextView
        android:id="@+id/destinationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/originEditText"
        android:layout_marginTop="40dp"
        android:freezesText="true"
        android:text="@string/destination_title" />

    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/destinationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destinationTitle"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="textCapSentences|textAutoCorrect" />

    <Button
        android:id="@+id/trace_route_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destinationEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/title_section_trace_routes" />

</RelativeLayout>